# power_bi_integration

./: README.md  basic_bi.pbix  conda.list.txt  flat_for_power_bi.py  main.py  pyproject.toml  requirements.txt
