[tool.poetry]
name = "power-bi-integration"
version = "0.1.0"
description = ""
authors = ["bdewhirst <b.dewhirst@gmail.com>"]
readme = "README.md"
packages = [{include = "power_bi_integration"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
matplotlib = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
